@@ -3,9 +3,18 @@
  This is a non exhaustive list of changes in the PyEdPro project. Git has
  a more complete list of logs.
 
+    Mon Sep 2 2019
+    Reload yes/no dialog, old buffer saved in backup dir
+
+    Sun Sep 1 2019
+    fixed cdir on load
+
+    Mon Aug 12 2019
+    added terminal right click shortcut
+
   may-08-2019   (0.71)
 
- Tested on running it on a windows DOS box.
+    Tested OK on running it in a windows DOS box.
 
     o Some path inconsistencies (corrected with os.sep)
     o Killed controlling 'terminal' aka DOS box for cleaner operation
@@ -168,6 +177,7 @@ v034:
 v042:
 
   Moved to pyedpro, version number restarted at 043.
+
 
 
 
